# ticket-monitor-app

./: .gitignore  App.js  README.md  app.json  build_app.spec  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
cloud_backend/: README.md  package-lock.json  package.json  vercel.json
cloud_backend/api/: index.js
cloud_backend/src/: app.js  constants.js  server.js
cloud_backend/src/services/: checker.js  scheduler.js  search.js  store.js
cloud_backend/src/utils/: hash.js  task.js
src/: constants.js
src/components/: TaskCard.js  TaskForm.js
src/maoyan_ticket_alert/: checker.py  main.py  models.py  storage.py  worker.py
src/maoyan_ticket_alert/ui/: main_window.py
src/services/: api.js  checker.js  notifications.js  search.js  storage.js
src/utils/: hash.js  task.js
